Fixed scrollbar issue

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -340,9 +340,7 @@ details[open] summary {
   display: none;
 }
 #toyCanvas {
-    width: 100%;
-    height: 100%;
-    transform: translateZ(0);
-    will-change: transform;
-    /* add other styles as desired */
+  width: 100%;
+  height: 100%;
+  overflow: hidden;    /* add other styles as desired */
 }
